// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> expect to ignore differences on \`RESULT\` 1`] = `
<div
  styleName="Timeline"
>
  <ol
    styleName="EventList"
  >
    <li
      className="EventListItem"
      key="CHANGE_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="CHANGE"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={1000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="SEARCH_ID"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="SEARCH"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={2000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="RESULT_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="RESULT"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={3000}
          />
        </span>
      </div>
    </li>
    <li
      styleName="EventListItem EventListItemSentinel"
    >
      <span
        aria-label="Empty"
        role="img"
      >
        📭
      </span>
    </li>
  </ol>
</div>
`;

exports[`<Timeline /> expect to render with a selected event 1`] = `
<div
  styleName="Timeline"
>
  <ol
    styleName="EventList"
  >
    <li
      className="EventListItem"
      key="CHANGE_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="CHANGE"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={1000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="SEARCH_ID"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="SEARCH"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={2000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="RESULT_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="RESULT"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={3000}
          />
        </span>
      </div>
    </li>
    <li
      styleName="EventListItem EventListItemSentinel"
    >
      <span
        aria-label="Empty"
        role="img"
      >
        📭
      </span>
    </li>
  </ol>
</div>
`;

exports[`<Timeline /> expect to render with differences 1`] = `
<div
  styleName="Timeline"
>
  <ol
    styleName="EventList"
  >
    <li
      className="EventListItem"
      key="CHANGE_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="CHANGE"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={1000}
          />
        </span>
      </div>
      <ul
        styleName="DifferenceList"
      >
        <li
          key="query"
          styleName="DifferenceListItem"
        >
          <code
            styleName="DifferenceListItemCode"
          >
            query
            : 
            ""
             → 
            "Apple"
          </code>
        </li>
      </ul>
    </li>
    <li
      className="EventListItem"
      key="SEARCH_ID"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="SEARCH"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={2000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="RESULT_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="RESULT"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={3000}
          />
        </span>
      </div>
    </li>
    <li
      styleName="EventListItem EventListItemSentinel"
    >
      <span
        aria-label="Empty"
        role="img"
      >
        📭
      </span>
    </li>
  </ol>
</div>
`;

exports[`<Timeline /> expect to render with events 1`] = `
<div
  styleName="Timeline"
>
  <ol
    styleName="EventList"
  >
    <li
      className="EventListItem"
      key="CHANGE_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="CHANGE"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={1000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="SEARCH_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="SEARCH"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={2000}
          />
        </span>
      </div>
    </li>
    <li
      className="EventListItem"
      key="RESULT_000"
      onClick={[Function]}
    >
      <div
        styleName="EventListItemSummary"
      >
        <Type
          name="RESULT"
        />
        <span
          styleName="EventListItemDate"
        >
          <DateTime
            format="mm:ss.SSS"
            value={3000}
          />
        </span>
      </div>
    </li>
    <li
      styleName="EventListItem EventListItemSentinel"
    >
      <span
        aria-label="Empty"
        role="img"
      >
        📭
      </span>
    </li>
  </ol>
</div>
`;

exports[`<Timeline /> expect to render without events 1`] = `
<div
  styleName="Timeline"
>
  <ol
    styleName="EventList"
  >
    <li
      styleName="EventListItem EventListItemSentinel"
    >
      <span
        aria-label="Empty"
        role="img"
      >
        📭
      </span>
    </li>
  </ol>
</div>
`;
